# envora

./: README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-php-macos.yml  ci.yml  release.yml
docs/: macos-signing.md  release-runtimes.md
src/: App.tsx  app-root.tsx  app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: .gitignore  my.cnf.default  nginx.conf.default  php.ini.default
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: composer.rs  mod.rs  mysql_config.rs  nginx_config.rs  php_config.rs  runtime.rs  service.rs  settings.rs
src-tauri/src/core/: error.rs  event.rs  mod.rs  platform.rs
src-tauri/src/download/: extractor.rs  manager.rs  mod.rs
src-tauri/src/runtime/: factory.rs  go.rs  java.rs  mod.rs  mysql.rs  nginx.rs  node.rs  php.rs  provider.rs
src-tauri/src/settings/: manager.rs
src-tauri/src/sidecar/: health.rs  manager.rs  mod.rs  registry.rs
src-tauri/src/state/: app_state.rs  mod.rs  operations.rs
src/hooks/: use-mutation.ts  use-runtimes.ts  use-services.ts  useRuntimes.ts  useServices.ts  useSwr.ts
src/i18n/: store.ts  translations.ts  use-translation.ts
src/lib/: tauri.ts  version.ts
src/pages/: Composer.tsx  Dashboard.tsx  JavaRuntime.tsx  MysqlRuntime.tsx  NginxRuntime.tsx  NodeRuntime.tsx  PhpRuntime.tsx  Runtimes.tsx  Settings.tsx  composer-page.tsx  dashboard-page.tsx  java-runtime.tsx  mysql-runtime.tsx  nginx-runtime.tsx  node-runtime.tsx  php-runtime.tsx  (+2 more)
(+73 files in other folders)
