[package]
name = "envora"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "envora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-http = "2.5.9"
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["stream"] }
futures-util = "0.3.32"
flate2 = "1.1.9"
tar = "0.4.46"
zip = "8.6.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.2", features = ["v4"] }
sha2 = "0.11.0"
hex = "0.4.3"
dirs = "6.0.0"
whoami = "1.6.0"
nix = { version = "0.31.3", features = ["signal"] }
async-trait = "0.1.89"

